--- a/src/styles/blocks/clock.scss
+++ b/src/styles/blocks/clock.scss
@@ -3,30 +3,30 @@
 
   @include background-image (url(../images/item_frame.png));
 
-  &--arrow-container-position--absolute {
+  &__arrow-container-position--absolute {
     position: absolute;
 
   }
 
-  &--arrow-container-size--big {
+  &__arrow-container-size--big {
     @include square($big-arrow-size);
     @include arrow-anim_position_top-left($big-arrow-size);
 
   }
 
-  &--arrow-container-size--small {
+  &__arrow-container-size--small {
     @include square($small-arrow-size);
     @include arrow-anim_position_top-left ($small-arrow-size);
   }
 
-  &--block-container-size {
+  &__block-container-size {
 
     height: $block-size;
     width: 100%;
 
   }
 
-  &--block-container-position--relative {
+  &__block-container-position--relative {
     position: relative;
   }
 
