--- a/src/styles/utils/variables.scss
+++ b/src/styles/utils/variables.scss
@@ -29,8 +29,11 @@ $block-container_row-number_index-and-gap: (
   "6": $block-container_row-number-2-6-gap,
 );
 
-$anim_big-arrow_rotate-time: 15s;
-$anim_small-arrow_rotate-time: 10s;
+$anim_big-arrow_rotate-time: 3600s;
+$anim_small-arrow_rotate-time: 60s;
+
+$anim-shake-degrees: 4deg;
+$anim-shake-time: 0.2s;
 
 @mixin square ($size) {
   width: $size;
